# guide_creator_flow

./: README.md  cooling_tower_practice.md  pyproject.toml
.devcontainer/: devcontainer.json
src/guide_creator_flow/: app.py  main.py
src/guide_creator_flow/crews/facility_assistant_crew/: facility_assistant_crew.py
src/guide_creator_flow/crews/facility_assistant_crew/config/: agents.yaml  tasks.yaml
src/guide_creator_flow/tools/: sensor_api_tool.py
tests/: convo
