[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
license = { text = "MIT" }
dependencies = [
   "crewai[tools]>=0.80.0,<1.0.0",
"numpy<2.0",
"onnxruntime==1.15.0",
"socksio>=1.0.0",
"pyarrow==17.0.0",
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
